--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "tslint-react": "^3.5.1",
     "webpack": "^4.6.0",
     "webpack-dashboard": "^1.1.1",
-    "webpack-dev-server": "^3.1.3"
+    "webpack-dev-server": "^3.1.3",
+    "webpack-merge": "^4.1.2"
   }
 }
