--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "main": "app.js",
   "scripts": {
+    "dev": "webpack --config config/webpack.dev.config.js --env.dev=true --env.ts=true",
     "test": "test"
   },
   "dependencies": {
@@ -40,6 +41,7 @@
     "tslint": "^5.9.1",
     "tslint-react": "^3.5.1",
     "webpack": "^4.6.0",
+    "webpack-cli": "^2.0.15",
     "webpack-dashboard": "^1.1.1",
     "webpack-dev-server": "^3.1.3",
     "webpack-merge": "^4.1.2"
