--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "redux": "^4.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0-beta.46",
+    "@babel/preset-env": "^7.0.0-beta.46",
     "@types/enzyme": "^3.1.10",
     "@types/jest": "^22.2.3",
     "@types/react": "^16.3.13",
@@ -32,6 +34,7 @@
     "@types/webpack-dev-server": "^2.9.4",
     "@types/webpack-env": "^1.13.6",
     "awesome-typescript-loader": "^5.0.0",
+    "babel-loader": "^8.0.0-beta.2",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "html-webpack-plugin": "^3.2.0",
