--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.46",
+    "@babel/polyfill": "^7.0.0-beta.46",
     "@babel/preset-env": "^7.0.0-beta.46",
+    "@babel/preset-react": "^7.0.0-beta.46",
     "@types/enzyme": "^3.1.10",
     "@types/jest": "^22.2.3",
     "@types/react": "^16.3.13",
