--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "ts-loader": "^4.2.0",
     "tslint": "^5.9.1",
     "tslint-react": "^3.5.1",
+    "typescript": "^2.8.3",
     "webpack": "^4.6.0",
     "webpack-cli": "^2.0.15",
     "webpack-dashboard": "^1.1.1",
