--- a/package.json
+++ b/package.json
@@ -20,39 +20,47 @@
     "redux": "^4.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.46",
-    "@babel/plugin-syntax-dynamic-import": "^7.0.0-beta.46",
-    "@babel/polyfill": "^7.0.0-beta.46",
-    "@babel/preset-env": "^7.0.0-beta.46",
-    "@babel/preset-react": "^7.0.0-beta.46",
+    "@babel/core": "^7.0.0-beta.47",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0-beta.47",
+    "@babel/polyfill": "^7.0.0-beta.47",
+    "@babel/preset-env": "^7.0.0-beta.47",
+    "@babel/preset-react": "^7.0.0-beta.47",
     "@types/enzyme": "^3.1.10",
     "@types/jest": "^22.2.3",
-    "@types/react": "^16.3.13",
+    "@types/react": "^16.3.14",
     "@types/react-dom": "^16.0.5",
     "@types/react-hot-loader": "^4.1.0",
-    "@types/react-redux": "^5.0.18",
+    "@types/react-redux": "^5.0.20",
     "@types/react-router-dom": "^4.2.6",
-    "@types/react-router-redux": "^5.0.13",
-    "@types/webpack": "^4.1.4",
+    "@types/react-router-redux": "^5.0.14",
+    "@types/webpack": "^4.1.7",
     "@types/webpack-dev-server": "^2.9.4",
     "@types/webpack-env": "^1.13.6",
+    "autoprefixer": "^8.5.0",
     "awesome-typescript-loader": "^5.0.0",
     "babel-loader": "^8.0.0-beta.2",
+    "css-loader": "^0.28.11",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^22.4.3",
-    "react-hot-loader": "^4.1.2",
+    "less": "^3.0.4",
+    "less-loader": "^4.1.0",
+    "node-sass": "^4.9.0",
+    "postcss-loader": "^2.1.5",
+    "react-hot-loader": "^4.1.3",
     "rimraf": "^2.6.2",
-    "ts-jest": "^22.4.4",
-    "ts-loader": "^4.2.0",
-    "tslint": "^5.9.1",
-    "tslint-react": "^3.5.1",
+    "sass-loader": "^7.0.1",
+    "style-loader": "^0.21.0",
+    "ts-jest": "^22.4.6",
+    "ts-loader": "^4.3.0",
+    "tslint": "^5.10.0",
+    "tslint-react": "^3.6.0",
     "typescript": "^2.8.3",
-    "webpack": "^4.6.0",
-    "webpack-cli": "^2.0.15",
+    "webpack": "^4.8.3",
+    "webpack-cli": "^2.1.3",
     "webpack-dashboard": "^1.1.1",
-    "webpack-dev-server": "^3.1.3",
+    "webpack-dev-server": "^3.1.4",
     "webpack-merge": "^4.1.2"
   }
 }
