--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "autoprefixer": "^8.5.0",
     "awesome-typescript-loader": "^5.0.0",
     "babel-loader": "^8.0.0-beta.2",
+    "core-js": "^2.5.6",
     "css-loader": "^0.28.11",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
@@ -60,7 +61,6 @@
     "webpack": "^4.8.3",
     "webpack-cli": "^2.1.3",
     "webpack-dashboard": "^1.1.1",
-    "webpack-dev-server": "^3.1.4",
-    "webpack-merge": "^4.1.2"
+    "webpack-dev-server": "^3.1.4"
   }
 }
