--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "css-loader": "^0.28.11",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
+    "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^22.4.3",
     "less": "^3.0.4",
@@ -58,6 +59,7 @@
     "tslint": "^5.10.0",
     "tslint-react": "^3.6.0",
     "typescript": "^2.8.3",
+    "url-loader": "^1.0.1",
     "webpack": "^4.8.3",
     "webpack-cli": "^2.1.3",
     "webpack-dashboard": "^1.1.1",
