defined selector max id rule for stylelint

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -16,6 +16,7 @@
     "selector-no-qualifying-type": [ true, {
       "ignore": ["attribute", "class", "id"]
     }],
-    "selector-class-pattern": null
+    "selector-class-pattern": null,
+    "selector-max-id": 2
   }
 }
