--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test": "test"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.0.0-beta.47",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-redux": "^5.0.7",
@@ -30,7 +31,6 @@
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.47",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0-beta.47",
-    "@babel/polyfill": "^7.0.0-beta.47",
     "@babel/preset-env": "^7.0.0-beta.47",
     "@babel/preset-react": "^7.0.0-beta.47",
     "@types/enzyme": "^3.1.10",
@@ -46,6 +46,7 @@
     "@types/webpack-env": "^1.13.6",
     "autoprefixer": "^8.5.0",
     "awesome-typescript-loader": "^5.0.0",
+    "babel-eslint": "^8.2.3",
     "babel-loader": "^8.0.0-beta.2",
     "core-js": "^2.5.6",
     "css-loader": "^0.28.11",
@@ -64,6 +65,7 @@
     "less-loader": "^4.1.0",
     "node-sass": "^4.9.0",
     "postcss-loader": "^2.1.5",
+    "prettier": "^1.12.1",
     "react-hot-loader": "^4.1.3",
     "rimraf": "^2.6.2",
     "sass-loader": "^7.0.1",
