- prettierignore added package.json,

--- a/package.json
+++ b/package.json
@@ -7,16 +7,15 @@
   "main": "app.js",
   "scripts": {
     "dev": "webpack-dev-server --config config/webpack.dev.config.js --env.dev=true --open",
-    "dev-dashboard": "webpack-dashboard -m webpack-dev-server --config config/webpack.dev.config.js --env.dev=true --open",
+    "dev:dashboard": "webpack-dashboard -m webpack-dev-server --config config/webpack.dev.config.js --env.dev=true --open",
     "build": "webpack --config config/webpack.dev.config.js --env.dev=true",
-    "lint-js": "eslint src/**",
-    "lint-ts": "tslint --project ./tsconfig.json",
-    "lint-scripts": "eslint src/** tslint --project ./tsconfig.json",
-    "lint-scss": "stylelint src/**/*.scss",
-    "lint-sass": "stylelint src/**/*.sass",
-    "lint-less": "stylelint src/**/*.less",
-    "lint-css": "stylelint src/**/*.css",
-    "lint-styles": "stylelint src/**/*.{css,scss,sass,less}",
+    "lint:scripts": "eslint src/** tslint --project ./tsconfig.json",
+    "lint:styles": "stylelint src/**/*.{css,scss,less}",
+    "lint:js": "eslint src/**",
+    "lint:ts": "tslint --project ./tsconfig.json",
+    "lint:scss": "stylelint src/**/*.scss",
+    "lint:less": "stylelint src/**/*.less",
+    "lint:css": "stylelint src/**/*.css",
     "pretty": "prettier --write src/**/*",
     "test": "test"
   },
