--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "license": "MIT",
   "main": "app.js",
   "scripts": {
-    "dev": "webpack-dev-server --config config/webpack.dev.config.js --env.dev=true --open",
-    "dev:dashboard": "webpack-dashboard -m webpack-dev-server --config config/webpack.dev.config.js --env.dev=true --open",
-    "build": "webpack --config config/webpack.dev.config.js --env.dev=true",
+    "dev": "webpack-dev-server --config config/webpack.dev.config.js --open",
+    "dev:dashboard": "webpack-dashboard -m webpack-dev-server --config config/webpack.dev.config.js --open",
+    "build": "webpack --config config/webpack.prod.config.js --env.prod=true --env.dev=false",
     "lint:scripts": "eslint src/** tslint --project ./tsconfig.json",
     "lint:styles": "stylelint src/**/*.{css,scss,less}",
     "lint:js": "eslint src/**",
@@ -48,6 +48,7 @@
     "awesome-typescript-loader": "^5.0.0",
     "babel-eslint": "^8.2.3",
     "babel-loader": "^8.0.0-beta.2",
+    "clean-webpack-plugin": "^0.1.19",
     "core-js": "^2.5.6",
     "css-loader": "^0.28.11",
     "enzyme": "^3.3.0",
@@ -63,7 +64,9 @@
     "jest": "^22.4.3",
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
+    "mini-css-extract-plugin": "^0.4.0",
     "node-sass": "^4.9.0",
+    "optimize-css-assets-webpack-plugin": "^4.0.2",
     "postcss-loader": "^2.1.5",
     "prettier": "^1.12.1",
     "react-hot-loader": "^4.1.3",
@@ -81,8 +84,10 @@
     "tslint-loader": "^3.6.0",
     "tslint-react": "^3.6.0",
     "typescript": "^2.8.3",
+    "uglifyjs-webpack-plugin": "^1.2.5",
     "url-loader": "^1.0.1",
     "webpack": "^4.8.3",
+    "webpack-bundle-analyzer": "^2.13.1",
     "webpack-cli": "^2.1.3",
     "webpack-dashboard": "^1.1.1",
     "webpack-dev-server": "^3.1.4"
