--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "dev": "webpack-dev-server --config config/webpack.dev.config.js --open",
     "dev:dashboard": "webpack-dashboard -m webpack-dev-server --config config/webpack.dev.config.js --open",
-    "build": "webpack --config config/webpack.prod.config.js --env.prod=true --env.dev=false",
+    "build": "webpack --config config/webpack.prod.config.js",
     "lint:scripts": "eslint src/** tslint --project ./tsconfig.json",
     "lint:styles": "stylelint src/**/*.{css,scss,less}",
     "lint:js": "eslint src/**",
@@ -23,6 +23,7 @@
     "@babel/polyfill": "^7.0.0-beta.47",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
+    "react-hot-loader": "^4.3.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^4.0.8",
@@ -69,7 +70,6 @@
     "optimize-css-assets-webpack-plugin": "^4.0.2",
     "postcss-loader": "^2.1.5",
     "prettier": "^1.12.1",
-    "react-hot-loader": "^4.1.3",
     "rimraf": "^2.6.2",
     "sass-loader": "^7.0.1",
     "style-loader": "^0.21.0",
