--- a/package.json
+++ b/package.json
@@ -21,13 +21,17 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.0.0-beta.47",
+    "axios": "^0.18.0",
+    "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-hot-loader": "^4.3.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^4.0.8",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.47",
@@ -61,6 +65,7 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.8.2",
     "file-loader": "^1.1.11",
+    "hard-source-webpack-plugin": "^0.8.1",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^22.4.3",
     "less": "^3.0.4",
