--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@types/webpack-env": "^1.13.6",
     "autoprefixer": "^8.6.3",
     "awesome-typescript-loader": "^5.1.1",
+    "axios-mock-adapter": "^1.15.0",
     "babel-eslint": "^8.2.3",
     "babel-loader": "^8.0.0-beta.3",
     "clean-webpack-plugin": "^0.1.19",
@@ -78,6 +79,7 @@
     "optimize-css-assets-webpack-plugin": "^4.0.2",
     "postcss-loader": "^2.1.5",
     "prettier": "^1.13.5",
+    "redux-mock-store": "^1.5.3",
     "rimraf": "^2.6.2",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
