--- a/package.json
+++ b/package.json
@@ -43,17 +43,6 @@
     "@babel/plugin-transform-runtime": "^7.0.0-beta.53",
     "@babel/preset-env": "^7.0.0-beta.53",
     "@babel/preset-react": "^7.0.0-beta.53",
-    "@types/enzyme": "^3.1.10",
-    "@types/jest": "^22.2.3",
-    "@types/react": "^16.4.6",
-    "@types/react-dom": "^16.0.6",
-    "@types/react-hot-loader": "^4.1.0",
-    "@types/react-redux": "^5.0.20",
-    "@types/react-router-dom": "^4.2.7",
-    "@types/react-router-redux": "^5.0.15",
-    "@types/webpack": "^4.4.5",
-    "@types/webpack-dev-server": "^2.9.5",
-    "@types/webpack-env": "^1.13.6",
     "autoprefixer": "^8.6.5",
     "awesome-typescript-loader": "^5.1.1",
     "axios-mock-adapter": "^1.15.0",
@@ -96,6 +85,7 @@
     "ts-loader": "^4.4.1",
     "tslint": "^5.10.0",
     "tslint-config-airbnb": "^5.9.2",
+    "tslint-config-prettier": "^1.13.0",
     "tslint-loader": "^3.6.0",
     "tslint-react": "^3.6.0",
     "typescript": "^2.9.2",
