--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,23 @@
 {
   "compilerOptions": {
-    "module": "es2015",
+    "baseUrl": ".",
+    "outDir": "dist",
+    "sourceMap": true,
+    "rootDir": "src",
     "target": "esnext",
+    "module": "esnext",
     "moduleResolution": "node",
-    "noEmitOnError": true
-    //    "sourceMap": true
+    "noEmitOnError": true,
+    "forceConsistentCasingInFileNames": true,
+    "noImplicitReturns": true,
+    "noImplicitThis": true,
+    "noImplicitAny": true,
+    "strictNullChecks": true,
+    "suppressImplicitAnyIndexErrors": true,
+    "noUnusedLocals": true,
+    "lib": ["dom", "es2016", "es2017.object"],
+    "allowSyntheticDefaultImports": true
   },
-  "exclude": ["node_modules"],
-  "typeRoots": ["./typings"]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist"]
 }
