--- a/package.json
+++ b/package.json
@@ -43,6 +43,19 @@
     "@babel/plugin-transform-runtime": "^7.0.0-beta.53",
     "@babel/preset-env": "^7.0.0-beta.53",
     "@babel/preset-react": "^7.0.0-beta.53",
+    "@types/enzyme": "^3.1.11",
+    "@types/jest": "^23.1.6",
+    "@types/node": "^10.5.2",
+    "@types/react": "^16.4.6",
+    "@types/react-dom": "^16.0.6",
+    "@types/react-hot-loader": "^4.1.0",
+    "@types/react-redux": "^6.0.4",
+    "@types/react-router-dom": "^4.2.7",
+    "@types/react-router-redux": "^5.0.15",
+    "@types/redux-logger": "^3.0.6",
+    "@types/webpack": "^4.4.6",
+    "@types/webpack-dev-server": "^2.9.5",
+    "@types/webpack-env": "^1.13.6",
     "autoprefixer": "^8.6.5",
     "awesome-typescript-loader": "^5.1.1",
     "axios-mock-adapter": "^1.15.0",
