--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,8 +16,9 @@
     "suppressImplicitAnyIndexErrors": true,
     "noUnusedLocals": true,
     "lib": ["dom", "es2016", "es2017.object"],
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "jsx": "react"
   },
-  "include": ["src/**/*"],
+  "include": ["src-ts/**/*"],
   "exclude": ["node_modules", "dist"]
 }
