--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@types/react-router-dom": "^4.2.7",
     "@types/react-router-redux": "^5.0.15",
     "@types/redux-logger": "^3.0.6",
+    "@types/redux-mock-store": "^1.0.0",
     "@types/webpack": "^4.4.6",
     "@types/webpack-dev-server": "^2.9.5",
     "@types/webpack-env": "^1.13.6",
@@ -101,6 +102,7 @@
     "tslint-config-prettier": "^1.13.0",
     "tslint-loader": "^3.6.0",
     "tslint-react": "^3.6.0",
+    "typesafe-actions": "^2.0.4",
     "typescript": "^2.9.2",
     "uglifyjs-webpack-plugin": "^1.2.5",
     "url-loader": "^1.0.1",
