--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@babel/plugin-transform-runtime": "^7.0.0-beta.53",
     "@babel/preset-env": "^7.0.0-beta.53",
     "@babel/preset-react": "^7.0.0-beta.53",
+    "@types/axios-mock-adapter": "^1.10.0",
     "@types/enzyme": "^3.1.11",
     "@types/jest": "^23.1.6",
     "@types/node": "^10.5.2",
