removed ts npm scripts

--- a/package.json
+++ b/package.json
@@ -9,10 +9,8 @@
     "dev": "webpack-dev-server --config config/webpack.dev.config.js --open",
     "dev:dashboard": "webpack-dashboard -m -- webpack-dev-server --config config/webpack.dev.config.js --env.useDashboard=true --open",
     "build": "webpack --config config/webpack.prod.config.js",
-    "lint:scripts": "eslint src/** && tslint --project ./tsconfig.json",
+    "lint:scripts": "eslint src/**",
     "lint:styles": "stylelint src/**/*.{css,scss,less}",
-    "lint:js": "eslint src/**",
-    "lint:ts": "tslint --project ./tsconfig.json",
     "lint:scss": "stylelint src/**/*.scss",
     "lint:less": "stylelint src/**/*.less",
     "lint:css": "stylelint src/**/*.css",
