--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "test:update": "jest --config jest.json -u"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.0.0-beta.54",
-    "@babel/runtime": "^7.0.0-beta.54",
+    "@babel/polyfill": "^7.0.0-rc.1",
+    "@babel/runtime": "^7.0.0-rc.1",
     "axios": "^0.18.0",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
@@ -35,31 +35,31 @@
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.54",
-    "@babel/plugin-syntax-dynamic-import": "^7.0.0-beta.54",
-    "@babel/plugin-transform-runtime": "^7.0.0-beta.54",
-    "@babel/preset-env": "^7.0.0-beta.54",
-    "@babel/preset-react": "^7.0.0-beta.54",
-    "autoprefixer": "^8.6.5",
+    "@babel/core": "^7.0.0-rc.1",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0-rc.1",
+    "@babel/plugin-transform-runtime": "^7.0.0-rc.1",
+    "@babel/preset-env": "^7.0.0-rc.1",
+    "@babel/preset-react": "^7.0.0-rc.1",
+    "autoprefixer": "^9.1.1",
     "awesome-typescript-loader": "^5.1.1",
     "axios-mock-adapter": "^1.15.0",
     "babel-eslint": "^8.2.6",
     "babel-loader": "^8.0.0-beta.3",
     "clean-webpack-plugin": "^0.1.19",
     "core-js": "^2.5.7",
-    "css-loader": "^0.28.11",
-    "enzyme": "^3.3.0",
+    "css-loader": "^1.0.0",
+    "enzyme": "^3.4.3",
     "enzyme-adapter-react-16": "^1.1.1",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-config-prettier": "^2.9.0",
+    "eslint": "^5.3.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^3.0.1",
     "eslint-loader": "^2.1.0",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-prettier": "^2.6.2",
     "eslint-plugin-react": "^7.9.1",
     "file-loader": "^1.1.11",
-    "hard-source-webpack-plugin": "^0.8.1",
+    "hard-source-webpack-plugin": "^0.12.0",
     "html-webpack-plugin": "^3.2.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^22.4.4",
@@ -67,13 +67,13 @@
     "less-loader": "^4.1.0",
     "mini-css-extract-plugin": "^0.4.1",
     "node-sass": "^4.9.2",
-    "optimize-css-assets-webpack-plugin": "^4.0.2",
-    "postcss-loader": "^2.1.6",
+    "optimize-css-assets-webpack-plugin": "^5.0.0",
+    "postcss-loader": "^3.0.0",
     "prettier": "^1.13.5",
     "redux-mock-store": "^1.5.3",
     "rimraf": "^2.6.2",
     "sass-loader": "^7.0.3",
-    "style-loader": "^0.21.0",
+    "style-loader": "^0.22.1",
     "stylelint": "^9.4.0",
     "stylelint-config-sass-guidelines": "^5.0.0",
     "stylelint-scss": "^3.2.0",
@@ -82,7 +82,7 @@
     "url-loader": "^1.0.1",
     "webpack": "^4.16.3",
     "webpack-bundle-analyzer": "^2.13.1",
-    "webpack-cli": "^2.1.5",
+    "webpack-cli": "^3.1.0",
     "webpack-dashboard": "^2.0.0",
     "webpack-dev-server": "^3.1.5"
   }
