--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
     "test:update": "jest --config jest.json -u"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.0.0-rc.1",
-    "@babel/runtime": "^7.0.0-rc.1",
+    "@babel/polyfill": "^7.0.0",
+    "@babel/runtime": "^7.0.0",
     "axios": "^0.18.0",
     "prop-types": "^15.6.2",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "react-hot-loader": "^4.3.4",
+    "react": "^16.5.0",
+    "react-dom": "^16.5.0",
+    "react-hot-loader": "^4.3.6",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
@@ -35,23 +35,22 @@
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-rc.1",
-    "@babel/plugin-proposal-class-properties": "^7.0.0-rc.1",
-    "@babel/plugin-syntax-dynamic-import": "^7.0.0-rc.1",
-    "@babel/plugin-transform-runtime": "^7.0.0-rc.1",
-    "@babel/preset-env": "^7.0.0-rc.1",
-    "@babel/preset-react": "^7.0.0-rc.1",
-    "autoprefixer": "^9.1.1",
-    "awesome-typescript-loader": "^5.1.1",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "autoprefixer": "^9.1.5",
     "axios-mock-adapter": "^1.15.0",
-    "babel-eslint": "^8.2.6",
-    "babel-loader": "^8.0.0-beta.3",
+    "babel-eslint": "^9.0.0",
+    "babel-loader": "^8.0.2",
     "clean-webpack-plugin": "^0.1.19",
     "core-js": "^2.5.7",
     "css-loader": "^1.0.0",
-    "enzyme": "^3.4.3",
-    "enzyme-adapter-react-16": "^1.1.1",
-    "eslint": "^5.3.0",
+    "enzyme": "^3.6.0",
+    "enzyme-adapter-react-16": "^1.5.0",
+    "eslint": "^5.5.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^3.0.1",
     "eslint-loader": "^2.1.0",
@@ -59,32 +58,32 @@
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-prettier": "^2.6.2",
     "eslint-plugin-react": "^7.9.1",
-    "file-loader": "^1.1.11",
+    "file-loader": "^2.0.0",
     "hard-source-webpack-plugin": "^0.12.0",
     "html-webpack-plugin": "^3.2.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^22.4.4",
+    "jest": "^23.5.0",
     "less": "^3.8.0",
     "less-loader": "^4.1.0",
-    "mini-css-extract-plugin": "^0.4.1",
+    "mini-css-extract-plugin": "^0.4.2",
     "node-sass": "^4.9.2",
-    "optimize-css-assets-webpack-plugin": "^5.0.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-loader": "^3.0.0",
     "prettier": "^1.13.5",
     "redux-mock-store": "^1.5.3",
     "rimraf": "^2.6.2",
     "sass-loader": "^7.0.3",
-    "style-loader": "^0.22.1",
-    "stylelint": "^9.4.0",
-    "stylelint-config-sass-guidelines": "^5.0.0",
+    "style-loader": "^0.23.0",
+    "stylelint": "^9.5.0",
+    "stylelint-config-sass-guidelines": "^5.2.0",
     "stylelint-scss": "^3.2.0",
     "stylelint-webpack-plugin": "^0.10.5",
     "uglifyjs-webpack-plugin": "^1.2.5",
     "url-loader": "^1.0.1",
-    "webpack": "^4.16.3",
+    "webpack": "^4.17.2",
     "webpack-bundle-analyzer": "^2.13.1",
     "webpack-cli": "^3.1.0",
     "webpack-dashboard": "^2.0.0",
-    "webpack-dev-server": "^3.1.5"
+    "webpack-dev-server": "^3.1.8"
   }
 }
