--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "main": "app.js",
   "scripts": {
     "dev": "webpack-dev-server --config config/webpack.dev.config.js --open",
-    "dev:dashboard": "webpack-dashboard -m -- webpack-dev-server --config config/webpack.dev.config.js --env.useDashboard=true --open",
+    "dev:dashboard": "webpack-dashboard -m -- webpack-dev-server --config config/webpack.dev.config.js --env.dashboard=true --open",
     "build": "webpack --config config/webpack.prod.config.js",
     "lint:scripts": "eslint src/**",
     "lint:styles": "stylelint src/**/*.{css,scss,less}",
@@ -21,70 +21,76 @@
     "test:update": "jest --config jest.json -u"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.2.5",
-    "@babel/runtime": "^7.2.0",
+    "@babel/polyfill": "^7.4.0",
+    "@babel/runtime": "^7.4.2",
+	"@babel/runtime-corejs3": "^7.4.2",
+    "@hot-loader/react-dom": "^16.8.5",
     "axios": "^0.18.0",
-    "eslint-config-defaults": "^9.0.0",
-    "prop-types": "^15.6.2",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-hot-loader": "^4.6.3",
-    "react-redux": "^6.0.0",
-    "react-router-dom": "^4.3.1",
+	"core-js": "^3.0.0",
+    "prop-types": "^15.7.2",
+    "react": "^16.8.5",
+    "react-dom": "^16.8.5",
+    "react-hot-loader": "^4.8.0",
+    "react-redux": "^6.0.1",
+    "react-router-dom": "5.0.0",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+	"regenerator-runtime": "^0.13.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/plugin-proposal-class-properties": "^7.2.3",
+    "@babel/core": "^7.4.0",
+    "@babel/plugin-proposal-class-properties": "^7.4.0",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/plugin-transform-runtime": "^7.2.0",
-    "@babel/preset-env": "^7.2.3",
+    "@babel/plugin-transform-runtime": "^7.4.0",
+    "@babel/preset-env": "^7.4.2",
     "@babel/preset-react": "^7.0.0",
-    "autoprefixer": "^9.4.3",
+    "autodll-webpack-plugin": "^0.4.2",
+    "autoprefixer": "^9.5.0",
     "axios-mock-adapter": "^1.16.0",
     "babel-eslint": "^10.0.1",
-    "babel-loader": "^8.0.4",
-    "clean-webpack-plugin": "^1.0.0",
-    "core-js": "^2.6.1",
-    "css-loader": "^2.1.0",
-    "enzyme": "^3.8.0",
-    "enzyme-adapter-react-16": "^1.7.1",
-    "eslint": "^5.11.1",
+    "babel-loader": "^8.0.5",
+    "babel-plugin-dynamic-import-node": "^2.2.0",
+    "clean-webpack-plugin": "^2.0.1",
+    "core-js": "^3.0.0",
+    "css-loader": "^2.1.1",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.11.2",
+    "eslint": "^5.15.3",
     "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-prettier": "^3.3.0",
-    "eslint-loader": "^2.1.1",
-    "eslint-plugin-import": "^2.12.0",
-    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-config-defaults": "^9.0.0",
+    "eslint-config-prettier": "^4.1.0",
+    "eslint-loader": "^2.1.2",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-prettier": "^3.0.1",
-    "eslint-plugin-react": "^7.12.1",
+    "eslint-plugin-react": "^7.12.4",
     "file-loader": "^3.0.1",
     "hard-source-webpack-plugin": "^0.13.1",
     "html-webpack-plugin": "^3.2.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^23.6.0",
+    "jest": "^24.5.0",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.11.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-loader": "^3.0.0",
-    "prettier": "^1.15.3",
+    "prettier": "^1.16.4",
     "redux-mock-store": "^1.5.3",
-    "rimraf": "^2.6.2",
-    "sass-loader": "^7.0.3",
+    "rimraf": "^2.6.3",
+    "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
-    "stylelint": "^9.9.0",
+    "stylelint": "^9.10.1",
     "stylelint-config-sass-guidelines": "^5.3.0",
-    "stylelint-scss": "^3.4.4",
+    "stylelint-scss": "^3.5.4",
     "stylelint-webpack-plugin": "^0.10.5",
-    "uglifyjs-webpack-plugin": "^2.1.1",
+    "uglifyjs-webpack-plugin": "^2.1.2",
     "url-loader": "^1.1.2",
-    "webpack": "^4.28.3",
-    "webpack-bundle-analyzer": "^3.0.3",
-    "webpack-cli": "^3.1.2",
-    "webpack-dashboard": "^2.0.0",
-    "webpack-dev-server": "^3.1.14"
+    "webpack": "4.29.6",
+    "webpack-bundle-analyzer": "^3.1.0",
+    "webpack-cli": "^3.3.0",
+    "webpack-dashboard": "^3.0.1",
+    "webpack-dev-server": "^3.2.1"
   }
 }
